objects/ACP_Market_and_Competition__c.object
<CustomObject>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Markets and Competition</relationshipLabel>
        <relationshipName>Markets_and_Competition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_CBC1_Description__c</fullName>
        <label>CBC1 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC1__c</fullName>
        <label>CBC1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC2_Description__c</fullName>
        <label>CBC2_Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC2__c</fullName>
        <label>CBC2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC3_Description__c</fullName>
        <label>CBC3_Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC3__c</fullName>
        <label>CBC3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CY_Bill_RR__c</fullName>
        <label>CY Bill (RR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_CY_YTD__c</fullName>
        <label>CY YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_LY_Bill__c</fullName>
        <label>LY Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_LY_YTD__c</fullName>
        <label>LY YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Main_Competitor_Share__c</fullName>
        <label>Main Competitor Share %</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Main_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Markets and Competition</relationshipLabel>
        <relationshipName>Markets_and_Competition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Market_Share_TAMLY__c</fullName>
        <formula>ACP_LY_Bill__c  /  ACP_TAM_LY_Bill__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share TAMLY</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Market_Share_TAM__c</fullName>
        <formula>ACP_LY_Bill__c / ACP_TAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share TAM</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Market_Share__c</fullName>
        <description>Market Share is a calculation of Revenue divided by TAM.</description>
        <label>Market Share %</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_NY_Fcst__c</fullName>
        <label>NY Fcst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_PAM__c</fullName>
        <label>PAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Product_CBC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product (CBC)</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Markets and Competition</relationshipLabel>
        <relationshipName>Markets_and_Competition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_SAM__c</fullName>
        <label>SAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_CYRR__c</fullName>
        <label>TAM CY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_LY_Bill__c</fullName>
        <label>TAM LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_NY_Fcst__c</fullName>
        <label>TAM NY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM__c</fullName>
        <description>Total Addressable Market</description>
        <label>TAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TE_Position__c</fullName>
        <label>TE Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Market and Competition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACP_Account_Plan__c</columns>
        <columns>ACP_CBC1__c</columns>
        <columns>ACP_CBC2__c</columns>
        <columns>ACP_CBC3__c</columns>
        <columns>ACP_Comments__c</columns>
        <columns>ACP_Main_Competitor__c</columns>
        <columns>ACP_Market_Share__c</columns>
        <columns>ACP_PAM__c</columns>
        <columns>ACP_CBC__c</columns>
        <columns>ACP_Product_CBC__c</columns>
        <columns>ACP_SAM__c</columns>
        <columns>ACP_TAM__c</columns>
        <columns>ACP_TE_Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MNC-{000000}</displayFormat>
        <label>Market and Competition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Markets and Competition</pluralLabel>
    <recordTypes>
        <fullName>ADM_Market_and_Competition</fullName>
        <active>true</active>
        <description>This Record Type is used for Market and Competition Summary</description>
        <label>ADM Market and Competition</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Market_and_Competition</fullName>
        <active>true</active>
        <description>This Record Type is used for Market and Competition Section</description>
        <label>General Market and Competition</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>